# pediatric_radiology_ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/processed/: conference_fractions.csv  conference_fractions.json  conference_ml_venues.csv  conference_ml_venues.json  conference_society_venues.csv  conference_society_venues.json  github_leaderboard.csv  github_repos.json  patent_yearly_counts.json  pubmed_summary.json  pubmed_trends.csv  pubmed_yearly_counts.json  rsna_ai_fraction.json  top_papers_pediatric_radiology_ai.json  top_papers_radiology_ai.json
notebooks/: explore_trends.ipynb
pedrad_ai/: __init__.py  analysis.py  conferences.py  config.py  crossref.py  doi2bib.py  github_repos.py  openalex.py  patents.py  pubmed.py  semantic_scholar.py  utils.py
reports/: 00_popularity_trends.md  01_landscape_players.md  02_state_of_the_field.md  README.md  references.bib
scripts/: build_reports.py  build_slides.py  collect_conferences.py  collect_landscape.py  collect_patents.py  collect_pubmed.py  make_figures.py  run_all.py
slides/: pedrad_ai_slides.tex
tests/: test_analysis.py  test_matching.py
